Update project - Including all endpoints
