# app/api/endpoints/v1/api_agent.py
@@ -1,21 +1,34 @@
-from fastapi import APIRouter, HTTPException
+from typing import Union
 
-from app.api.endpoints.mock_data import mock_agent_data
-from app.schemas.tools import StoreAgentDataResponse, StoreAgentDataRequest, RetrieveAgentDataRequest, \
-    RetrieveAgentDataResponse
+from fastapi import APIRouter
+
+from app.schemas.real_estate import RealEstateAgent
+from app.schemas.tools import PreferencesRequest, LookupRequest, SchedulerReminderRequest
+from app.services.real_estate_agent_service import RealEstateAgentService
+from app.tasks import trigger_scheduled_remainder
 
 agent_router = APIRouter()
 
 
-@agent_router.post("/store_data", response_model=StoreAgentDataResponse)
-def store_agent_data(request: StoreAgentDataRequest):
-    mock_agent_data[request.agent_id] = {"interaction_data": request.interaction_data}
-    return StoreAgentDataResponse(status="Data stored successfully")
+@agent_router.post("/save_agent_memory_preferences", response_model=str)
+def save_agent_memory_preferences(request: PreferencesRequest):
+    agent = RealEstateAgentService().save_agent_memory(whatsapp_number=request.whatsapp_number,
+                                                       parameter_name=request.parameter_name,
+                                                       parameter_value_description=request.parameter_value_description)
+
+    return agent
 
 
-@agent_router.post("/retrieve_data", response_model=RetrieveAgentDataResponse)
-def retrieve_agent_data(request: RetrieveAgentDataRequest):
-    if request.agent_id in mock_agent_data:
-        return RetrieveAgentDataResponse(interaction_data=mock_agent_data[request.agent_id]["interaction_data"])
-    else:
-        raise HTTPException(status_code=404, detail="Agent data not found")
+@agent_router.post("/agent_lookup", response_model=Union[str, RealEstateAgent])
+def agent_lookup(request: LookupRequest):
+    agent = RealEstateAgentService().lookup(whatsapp_number=request.whatsapp_number)
+    return agent
+
+
+
+@agent_router.post("/schedule_remainder")
+def schedule_remainder(request: SchedulerReminderRequest):
+    trigger_scheduled_remainder.apply_async(args=[request.real_estate_agent_id, request.remainder_description],
+                                            countdown=request.remainder_time_in_seconds)
+
+    return {"message": "Remainder scheduled successfully."}
